# memospace

./: .gitignore  FEATURES.md  README.md  pyproject.toml
examples/: async_history_usage.py  async_usage.py  basic_usage.py  entity_usage.py  history_usage.py  hybrid_search_usage.py  reranker_usage.py
memospace/: __init__.py  entity_extraction.py
memospace/configs/: __init__.py  base.py  embeddings.py  llms.py  rerankers.py  vector_stores.py
memospace/embeddings/: __init__.py  base.py  openai.py
memospace/llms/: __init__.py  base.py  openai.py
memospace/memory/: __init__.py  entity_store.py  main.py  prompts.py  storage.py
memospace/rerankers/: __init__.py  base.py  cohere_reranker.py  huggingface_reranker.py  llm_reranker.py
memospace/search/: __init__.py  bm25.py  hybrid_search.py
memospace/text_processing/: __init__.py  lemmatizer.py
memospace/utils/: __init__.py  factory.py
memospace/vector_stores/: __init__.py  base.py  qdrant.py
