[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memospace"
version = "0.1.0"
description = "A simple memory module for AI Agents"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic>=2.7.0",
    "openai>=1.0.0",
    "qdrant-client>=1.12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["memospace"]

[tool.ruff]
line-length = 120
